[package]
name = "Windows_Service"
version = "0.1.0"
authors = ["fghydx <5909386@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl-windows = {path = "../gl-windows"}
gl-tools = {path = "../gl-tools"}
log = "0.4.11"
log4rs = "1.0.0-alpha-1"
