[package]
name = "actix_web_test"
version = "0.1.0"
authors = ["fghydx <5909386@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"

actix-rt = "1.1.1"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
evmap = "10.0.2"
dashmap = "4.0.0-rc6"
rust-ini = "0.15.3"
cron = "0.6.1"
lazy_static = "1.4.0"
gl-log = {path = "../gl-log"}
gl-windows = {path = "../gl-windows"}
gl-tools = {path = "../gl-tools"}


[dependencies.awc]
version = "1.0.1"
default-features = false